# sobel-ps

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/image/: CMakeLists.txt  mat.cpp  mat.h  operations.cpp  operations.h
test/: CMakeLists.txt  mat_test.cpp  operations_test.cpp
